Fixes 22: Farsi scatterplot quote alignment

--- a/src/css/rtl.css
+++ b/src/css/rtl.css
@@ -53,4 +53,8 @@
     position: relative;
     top: -2px;
   }
+
+  .quote-card {
+    direction: ltr;
+  }
 }
